syntax = "proto3";
option go_package = "github.com/beneath-hq/beneath/infra/engine/proto";
package engine;

import "server/data/grpc/proto/gateway.proto";

message WriteRequest {
  bytes write_id = 1;
  repeated gateway.v1.InstanceRecords instance_records = 2;
}

message WriteReport {
  bytes write_id = 1;
  bytes instance_id = 2;
  int32 records_count = 3;
  int32 bytes_total = 4;
}
